after home page correction

--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css">
   <script src="https://unpkg.com/cropperjs@next"></script>
 
-  
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
 
 
   <style>
