--- a/views/admin/dashboardSales.ejs
+++ b/views/admin/dashboardSales.ejs
@@ -1,29 +1,28 @@
 <%-include("./layout/header")%>
 
     
-
-    <div class="row m-2">
-        <div class="col-4 half-gutter grid-margin mb-4">
+<div class="container">
+    <div class="row my-3">
+        <div class="col-md-4 col-sm-6 mb-4 ">
             <div class="card card-white">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-4">
-                            <a href="/admin/dashboard/report" class="btn btn-tranparent">
-                                <h4 class="mb-0 text-blue">Yearly Report</h4>
-                            </a>
+                        <a href="/admin/dashboard/report" class="btn btn-transparent">
+                            <h4 class="mb-0 text-blue">Yearly Report</h4>
+                        </a>
                         <i class="fas fa-chart-pie"></i>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-4 half-gutter grid-margin mb-4">
+        <div class="col-md-4 col-sm-6 mb-4">
             <div class="card card-white">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <div>
-                            <a onclick="" class="btn btn-tranparent">
+                            <a onclick="month()" class="btn btn-transparent">
                                 <h4 class="mb-0 text-orange">Month Report</h4>
                             </a>
-                            <!-- <p class="text-muted mb-0">Net Profit</p> -->
                         </div>
                         <div>
                             <i class="fas fa-chart-pie text-orange fs-2"></i>
@@ -32,12 +31,12 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 half-gutter grid-margin mb-4">
+        <div class="col-md-4 col-sm-6 mb-4">
             <div class="card card-white">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <div>
-                            <a onclick="" class="btn btn-tranparent">
+                            <a onclick="dailysale()" class="btn btn-transparent">
                                 <h4 class="mb-0 text-pink">Daily Report</h4>
                             </a>
                         </div>
@@ -49,37 +48,45 @@
             </div>
         </div>
     </div>
-    <table id="dtBasicExample" class="table table-striped table-bordered m-2" cellspacing="0" width="100%">
-        <thead class="bg-light">
-            <tr>
-                <!-- <th>Order ID</th> -->
-                <th>Date</th>
-                <th>Total Order</th>
-                <th>Total Product</th>
-                <th>Total</th>
-                <th>Profit</th>
-            </tr>
-        </thead>
-        <tbody id="tableVa">
-            <% for (let report of yearly) { %>
-                <tr>
-                    <td><a href="#">
+    <div class="container-fluid my-3">
+        <div class="table-responsive overflow-auto">
+            <table id="dtBasicExample" class="table table-striped table-bordered my-3" cellspacing="0" width="100%">
+                <thead class="bg-light">
+                    <tr>
+                        <!-- <th>Order ID</th> -->
+                        <th>Date</th>
+                        <th>Total Order</th>
+                        <th>Total Product</th>
+                        <th>Total</th>
+                        <th>Profit</th>
+                    </tr>
+                </thead>
+                <tbody id="tableVa">
+                    <% for (let report of yearly) { %>
+                    <tr>
+                        <td>
                             <%=report._id.year%>
-                        </a></td>
-                    <td>
-                        <%=report.count%>
-                    </td>
-                    <td>
-                        <%=report.items%>
-                    </td>
-                    <td>&#x20B9;<%=report.total%>.00</td>
-                    <td>&#x20B9;<%=(report.total*15) /100%>
-                    </td>
-                    <!-- <td>$400</td> -->
-                    <%}%>
-                </tr>
-        </tbody>
-    </table>
+                        <td>
+                            <%=report.count%>
+                        </td>
+                        <td>
+                            <%=report.items%>
+                        </td>
+                        <td>&#x20B9;<%=report.total%>.00</td>
+                        <td>&#x20B9;<%=(report.total*15) /100%>
+                        </td>
+                        <%}%>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="dataTables_paginate" id="dtBasicExample_paginate">
+                <ul class="pagination justify-content-center">
+                   
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"></script>
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" language="javascript"
@@ -100,31 +107,42 @@
         var table = $('#dtBasicExample').DataTable({
             dom: 'Bfrtip',
             "searching": false,// false to disable search (or any other option)
-            buttons: [
-            'copy', 'csv', 'excel', 'pdf', 'print'
-        ]
+            buttons: ['copy', 'csv', 'excel', 'pdf', 'print'],
+            "pagingType": "full_numbers", // Add this to set pagination style
+            "language": { // Add this to customize pagination labels
+                "paginate": {
+                    "first": "&laquo;",
+                    "last": "&raquo;",
+                    "previous": "&lsaquo;",
+                    "next": "&rsaquo;"
+                }
+            },
+            "drawCallback": function () {
+        $('#dtBasicExample_paginate .pagination .page-item').addClass('btn btn-light');
+        $('#dtBasicExample_paginate .pagination .page-item.disabled').removeClass('btn btn-light');
+        $('#dtBasicExample_paginate .pagination .page-item.active').removeClass('btn btn-light').addClass('btn btn-primary');
+        }
         });
         $('.dataTables_length').addClass('bs-select');
         function month() {
             axios({
                 method: "post",
-                url: "/admin/report/month",
+                url: "/admin/dashboard/report/month",
             })
                 .then((result) => {
                     if (result.data.error) {
                         console.log("oops");
                     } else {
                         let html = "";
-                        let saleReport = result.data.salesRep;
+                        let saleReport = result.data.monthlySales;
                         saleReport.forEach((element) => {
                             html += `<tr>
-                                                                                <td><a href="#">${element._id.month
-                                }</a></td>
-                                                                                <td>${element.count}</td>
-                                                                                <td>${element.items}</td>
-                                                                                <td>&#x20B9;${element.total}.00</td>
-                                                                                <td>&#x20B9;${(element.total * 15) / 100}</td>
-                                                                            </tr>`;
+                            <td><a href="#">${element._id.month}</a></td>
+                                <td>${element.count}</td>
+                                <td>${element.items}</td>
+                                <td>&#x20B9;${element.total}.00</td>
+                                <td>&#x20B9;${(element.total * 15) / 100}</td>
+                            </tr>`;
                         });
                         table.clear().rows.add($(html)).draw();
                     }
@@ -136,31 +154,31 @@
         function dailysale() {
             axios({
                 method: "post",
-                url: "/admin/report/daily",
+                url: "/admin/dashboard/report/daily",
             })
                 .then((result) => {
                     if (result.data.error) {
                         console.log("oops");
                     } else {
                         let html = "";
-                        let saleReport = result.data.daily;
+                        let saleReport = result.data.dailySales;
                         saleReport.forEach((element) => {
-                            html += `<tr>
-                                                                                <td><a href="#">${element._id.Day}/${element._id.Month
-                                }/${element._id.Year}</a></td>
-                                                                                <td>${element.count}</td>
-                                                                                <td>${element.items}</td>
-                                                                                <td>&#x20B9;${element.Total}.00</td>
-                                                                                <td>&#x20B9;${(element.Total * 15) / 100}</td>
-                                                                            </tr>`;
+                            html += 
+                        `<tr>
+                            <td><a href="#">${element._id.Day}/${element._id.Month}/${element._id.Year}</a></td>
+                            <td>${element.count}</td>
+                            <td>${element.items}</td>
+                            <td>&#x20B9;${element.total}.00</td>
+                            <td>&#x20B9;${(element.total * 15) / 100}</td>
+                        </tr>`;
                         });
                         table.clear().rows.add($(html)).draw();
-                    //     $(document).ready(function () {
-                    //     $('#dtBasicExample').DataTable({
-                    //         "searching": false // false to disable search (or any other option)
-                    //     });
-                    //     $('.dataTables_length').addClass('bs-select');
-                    // })
+                        $(document).ready(function () {
+                        $('#dtBasicExample').DataTable({
+                            "searching": false // false to disable search (or any other option)
+                        });
+                        $('.dataTables_length').addClass('bs-select');
+                    })
                     }
                 })
                 .catch((err) => {
