--- a/views/admin/layout/footer.ejs
+++ b/views/admin/layout/footer.ejs
@@ -6,6 +6,24 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#ordersTable').DataTable({
+            lengthMenu: [5, 10, 25, 50],
+            pageLength: 5,
+            ordering: true,
+            searching: true,
+            paging: true,
+            // Other DataTables options go here
+        });
+        $('#ordersTable').addClass('mb-2');
+        $('#ordersTable_paginate .pagination .page-item').addClass('btn btn-light');
+        $('#ordersTable_paginate .pagination .page-item.disabled').removeClass('btn btn-light');
+        $('#ordersTable_paginate .pagination .page-item.active').removeClass('btn btn-light').addClass('btn btn-primary');
+    });
+</script>
   <script>
     $(document).ready(function() {
       $('.zoom').elevateZoom({
