--- a/views/user/checkOutPayment.ejs
+++ b/views/user/checkOutPayment.ejs
@@ -91,34 +91,32 @@ body {
 }
 
 </style>
-<section class="checkout spad mt-5 mb-5">
+<section class="checkout spad mt-5 mb-2">
   <div class="container">
-    <div class="checkout__form mt-5 mb-5">
+    <div class="checkout__form mt-5 mb-0">
 
-      
-      <div class=" row m-5">
+      <div class="row m-5">
         <div class="col-lg-8">
           <h4>Billing Details</h4>
         </div>
-        <div class="col-4 ">
-          <form class="mb-30" id="couponForm">
+        <div class="col-lg-4">
+          <form class="mb-3" id="couponForm">
             <div class="input-group">
               <input type="text" id="couponName" pattern="^(?!.*\s)[^\s]+(?<!\s)$" class="form-control border-0 form-control-sm text-dark font-weight-bold" style="box-shadow: none;background-color: #f5f5f5;" placeholder="Coupon Code" required>
-              <div class="input-group-append ">
-                <button type="submit"  class="btn btn-sm btn-dark" >Apply Coupon</button>
+              <div class="input-group-append">
+                <button type="submit" class="btn btn-sm btn-dark">Apply Coupon</button>
               </div>
             </div>
           </form>
         </div>
       </div>
-      
-      <form  class="mt-5 mb-5" >
-        <div class="row">
-          <div class="col-lg-8 col-md-6 mt-5 mb-5">
+
+      <div class="row">
+        <div class="col-lg-6 col-md-7 mt-2">
             <div class="form-group">
               <div class="row">
-                <div class="card-deck d-flex flex-wrap">
-                  <div id="cod-card" class="cardx card mb-4" style="min-width: 15rem; max-height: 4rem;">
+                <div class="col-md-4">
+                  <div class="card mb-4">
                     <div class="card-body" role="button">
                       <h5 class="card-title">
                         <input id="cod" value="cod" name="payment" type="radio">
@@ -127,11 +125,8 @@ body {
                     </div>
                   </div>
                 </div>
-              </div>
-              
-              <div class="row mt-5 mb-5">
-                <div class="card-deck d-flex flex-wrap">
-                  <div id="Online-card" class="cardx card mb-4" style="min-width: 15rem; max-height: 4rem;">
+                <div class="col-md-4">
+                  <div class="card mb-4">
                     <div class="card-body" role="button">
                       <h5 class="card-title">
                         <input id="Online" value="online" name="payment" type="radio">
@@ -140,75 +135,107 @@ body {
                     </div>
                   </div>
                 </div>
-              </div>
-
-              <div class="row">
-                <div class="card-deck d-flex flex-wrap">
-                  <div id="cod-card" class="cardx card mb-4" style="min-width: 15rem; max-height: 4rem;">
+                <div class="col-md-4">
+                  <div class="card mb-4">
                     <div class="card-body" role="button">
                       <h5 class="card-title">
                         <input id="wallet" value="wallet" name="payment" type="radio">
-                        <label for="cod">Wallet</label>
+                        <label for="wallet">Wallet Payment</label>
                       </h5>
                     </div>
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
           <input type="hidden" id="addressId" name="addressId" value="<%= addressId %>">
-          <div class="col-lg-4 col-md-6 mt-5 mb-5">
-            <div  >
-              <h4> <u>Shipping Methods</u> </h4>
+          <div class="col-lg-6 col-md-5 mt-2">
+            <div>
+              <h4><u>Shipping Methods</u></h4>
             </div>
             <div class="row">
-              <div class="col">
+              <div class="col-12">
                 <div class="card-body shadow rounded mb-5">
                   <div class="form-check">
                     <input onchange="addShipping('0','<%=cart.totalPrice%>')" class="form-check-input" type="radio"
                       name="shippingOption" id="normalShipping" value="normal" checked>
                     <label class="form-check-label" for="normalShipping">
-                      Normal 
+                      Normal
                     </label>
                   </div>
                 </div>
               </div>
-              <div class="col">
+              <div class="col-12">
                 <div class="card-body shadow rounded mb-5">
                   <div class="form-check">
                     <input onchange="addShipping('40','<%=cart.totalPrice%>')" class="form-check-input" type="radio"
                       name="shippingOption" id="fastShipping" value="fast">
                     <label class="form-check-label" for="fastShipping">
-                      Fast 
+                      Fast
                     </label>
                   </div>
                 </div>
               </div>
             </div>
-            
-            <div class="checkout__order">
-              <h4>Your Order</h4>
-              <div class="checkout_order_products">Products <span>Total </span></div>
-              <ul>
-                <li>
-                  <h6 class="font-weight-medium"><span>shipping  </span>$<span id="shippingPrice">0</span></>
-                  </li>
-                  <li>
-                  <h6 class="font-weight-medium"><span>Coupon  </span>$<span class="couponShow" >0</span></>
-                </li>
-                <input type="hidden" name="session" value="<%=session%>">
-              </ul>
-              <input type="hidden" name="totalPrice" value="<%= cart.totalPrice %>">
-              <div id="totalCart" class="checkout_order_total">Total <span>$<span id="totalPriceValue"><%= cart.totalPrice %></span></span></div>
-              <button type="button" onclick="placeorder()" class="site-btn rounded">PLACE ORDER</button>
+
+            <div class="row">
+              <div class="col-md-12">
+                <h4>Your Order</h4>
+              </div>
+              <div class="col-md-12 checkout_order_products">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h6 class="font-weight-medium">Products</h6>
+                    </div>
+                    <div class="col-md-6 text-md-right">
+                      <h6 class="font-weight-medium"> <ul> Sub Total   :<span><%=cart.totalPrice%> </ul></span></h6>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <ul class="text-md-right">
+                    <li>
+                      <h6 class="font-weight-medium">
+                        <span>Shipping</span>
+                        $<span id="shippingPrice">0</span>
+                      </h6>
+                    </li>
+                    <li>
+                      <h6 class="font-weight-medium">
+                        <span>Coupon</span>
+                        $<span class="couponShow">0</span>
+                      </h6>
+                    </li>
+                    <input type="hidden" name="session" value="<%=session%>">
+                  </ul>
+                </div>
+                <div class="col-md-12">
+                  <input type="hidden" name="totalPrice" value="<%= cart.totalPrice %>">
+                </div>
+                <div class="col-md-12 checkout_order_total">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h6 class="font-weight-medium">Total</h6>
+                    </div>
+                    <div class="col-md-6 text-md-right">
+                      <span>$<span id="totalPriceValue"><%= cart.totalPrice %></span></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <button type="button" onclick="placeorder()" class="btn btn-dark rounded">PLACE ORDER</button>
+                </div>
+              </div>
             </div>
+            
           </div>
         </div>
       </form>
     </div>
   </div>
 </section>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -221,7 +248,6 @@ body {
    
           $(".cardx").click(function () {//Clicking the card
               var inputElement = $(this).find('input[type=radio]').attr('id');
-              // console.log(inputElement);
               btnShow();
               unclickRadio();
               removeActive();
@@ -252,7 +278,6 @@ body {
       
     function addShipping(shippingCost, totalPrice) {
     const selectedOption = document.querySelector('input[name="shippingOption"]:checked').value;
-    console.log("Selected shipping option:", selectedOption);
 
     // Update shipping price
     const shippingPriceElement = document.getElementById('shippingPrice');
@@ -261,7 +286,6 @@ body {
     // Update total cart price
     const couponShowElement = document.querySelector('.couponShow');
     const couponText = couponShowElement.textContent;
-    console.log(couponText)
 
     const totalPriceElement = document.getElementById('totalPriceValue');
     const newTotalPrice = parseFloat(totalPrice) + parseFloat(shippingCost)-parseFloat(couponText);
@@ -280,7 +304,6 @@ body {
             const addressId = document.getElementById('addressId');
             // "<%= addressId %>"
             const selectedOption = document.querySelector('input[name="shippingOption"]:checked').value;
-            // console.log(addressId.value);
             axios({
                 method: "post",
                 url: "/admin/coupon/apply",
@@ -292,7 +315,6 @@ body {
                 }
             })
             .then((result)=>{
-                // console.log(result);
                 if(result.data.response == false){
                     Swal.fire({
                     icon: "warning",
@@ -309,14 +331,19 @@ body {
                     })
 
                 }else{
-                    console.log(result.data.coupon.discount);
+                  Swal.fire({
+                      icon: "success",
+                      title: "Coupon Applied Successfully",
+                      text: "Congratulations! The coupon has been applied to your order.",
+                  });
                     document.querySelector('.couponShow').innerHTML= `${result.data.coupon.discount}`;
                     document.querySelector('.couponShow').setAttribute("id",result.data.coupon._id);
-                    // document.getElementById('totalPriceValue').innerHTML= `$${('<%= cart.cartPrice %>'- result.data.coupon.discount)}`;
                     const totalPriceElement = document.getElementById('totalPriceValue');
-                    const currentTotalPrice = parseFloat(totalPriceElement.textContent); // Get the numeric value from the element
-
-                    const newTotalPrice = currentTotalPrice - parseFloat(result.data.coupon.discount);
+                    let shippingCost  = document.getElementById('shippingPrice').textContent;
+                    shippingCost  = parseInt(shippingCost )
+                    const currentTotalPrice = '<%= cart.totalPrice %>'
+                    // const newTotalPrice = currentTotalPrice - parseFloat(result.data.coupon.discount);
+                    const newTotalPrice = currentTotalPrice - parseFloat(result.data.coupon.discount)+shippingCost;
                     totalPriceElement.textContent = newTotalPrice;
                 }
             })
@@ -325,12 +352,9 @@ body {
 
         function placeorder(){
             const payment = document.querySelector('input[name="payment"]:checked').value;
-            // const addressId = document.getElementById('addressId').value;
             const couponId = document.querySelector('.couponShow').id;
-            console.log(payment);
         if(payment=="online"){
             handleOnlinePayment()
-            // console.log("sdl");
         }
         else{
             axios({
@@ -344,7 +368,6 @@ body {
               }
             })
             .then((result)=>{
-              // console.log(result.data);
               if(result.data.response){
                 location.href=`/order/success?orderId=${result.data.orderId}`;
               }else{
@@ -360,7 +383,6 @@ body {
         }          
         function handleOnlinePayment(){
             const payment = document.querySelector('input[name="payment"]:checked').value;  
-            // const addressId = document.getElementById('addressId').value;
             let couponId = document.querySelector('.couponShow').id;
             if(!couponId){
               couponId=null;
@@ -386,8 +408,6 @@ body {
                             "image": "https://dummyimage.com/",
                             "order_id": ""+res.order_id+"",
                             "handler": function(response){
-                                // alert("payment Succeeded");
-                                // alert(response.razorpay_payment_id);
 
                                 axios({
                                 method: "post",
@@ -422,67 +442,10 @@ body {
                     }
                 }
             })
-        }
-        // function handleOnlinePayment() {
-        //   // console.log("why isnt this working")
-        //   // const session = document.getSelector('session');
-        //   // const payment = document.querySelector('input[name="payment"]:checked').value;
-        //   // const addressId = document.getElementById('addressId').value;
-        //   const couponId = document.querySelector('.couponShow').id;
-        //   const selectedOption = document.querySelector('input[name="shippingOption"]:checked').value;
-        //   const totalPriceElement = document.getElementById('totalPriceValue');
-        //   const currentTotalPrice = parseFloat(totalPriceElement.textContent);
-        //   $.ajax({
-        //       url: "/create-order",
-        //       method: "post",
-        //       data: {
-        //         shippingOption:selectedOption,
-        //         couponId:couponId,
-        //         totalPrice: currentTotalPrice,
-        //         addressId: "<%= addressId %>",
-        //         totalPrice: '<%= cart.totalPrice %>',
-        //       },
-        //     })
-        //     .then((res) => {
-        //       console.log(res.amount);
-        //     // Open the Razorpay payment popup
-        //     const options = {
-        //       key: res.key_id,
-        //       amount: res.amount ,
-        //       currency: 'INR', 
-        //       name: 'SolMate',
-        //       description: 'Payment for Order',
-        //       order_id: res.order_id,
-        //       handler: function (response) {
-        //         // Handle the payment success response
-        //         alert("Payment Succeeded");
-
-        //         window.location.href = '/order/success?orderId=' + orderId;
-        //       },
-        //       prefill: {
-        //         email: 'customer@example.com',
-        //         contact: 'Customer Contact Number',
-        //       },
-        //     };
-        //       const razorpayInstance = new Razorpay(options);
-        //       razorpayInstance.open();
-        //     })
-        //     .catch((error) => {
-        //       console.error('Error creating Razorpay order:', error);
-        //     });
-        // }
-          
+        }          
           </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"></script>
-<script>
-  // Your existing JavaScript code
-
-  // function proceedToPayment() {
-  //   // Handle payment logic here and redirect to the payment page
-  //   window.location.href = "/payment"; // Replace with your payment page URL
-  // }
-</script>
 
 <%- include("./layout/footer.ejs") %>
