--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -385,29 +385,16 @@
                   </ul>
 
                   <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane border fade show active" id="pills-description" role="tabpanel"
-                      aria-labelledby="pills-description-tab">
-                      <p>
-                        Even the all-powerful Pointing has no control about the
-                        blind texts it is an almost unorthographic life One day
-                        however a small line of blind text by the name of Lorem
-                        Ipsum decided to leave for the far World of Grammar.
-                      </p>
-                      <p>
-                        When she reached the first hills of the Italic Mountains,
-                        she had a last view back on the skyline of her hometown
-                        Bookmarksgrove, the headline of Alphabet Village and the
-                        subline of her own road, the Line Lane. Pityful a rethoric
-                        question ran over her cheek, then she continued her way.
-                      </p>
-                      <ul>
-                        <li>The Big Oxmox advised her not to do so</li>
-                        <li>Because there were thousands of bad Commas</li>
-                        <li>Wild Question Marks and devious Semikoli</li>
-                        <li>She packed her seven versalia</li>
-                        <li>tial into the belt and made herself on the way.</li>
-                      </ul>
+                    <div class="tab-pane border fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-md-12">
+                            <p class=""><%=products.description%></p>
+                          </div>
+                        </div>
+                      </div>
                     </div>
+                  </div>
 
                     <div class="tab-pane border fade" id="pills-review" role="tabpanel"
                       aria-labelledby="pills-review-tab">
