--- a/views/user/success.ejs
+++ b/views/user/success.ejs
@@ -76,82 +76,81 @@
       }
     }
 </style>
-<div class="container mt-5 mb-5">
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-8">
-        <div class="card">
-          <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-secondary font-weight-bold border px-3 mr-1">SolMate</span></h1>
-          <div class="invoice p-5">
-            <h5>Your Order Confirmed!</h5>
-            <span class="font-weight-bold d-block mt-4">Hy <%=user.name%></span>
-            <span>Your order has been confirmed and will be shipped in the next two weeks!</span>
-            <div class="payment border-top mt-3 mb-3 border-bottom table-responsive">
-              <!-- Payment info (if applicable) -->
-            </div>
-            <div class="product border-bottom table-responsive">
-              <table class="table table-borderless">
-                <tbody class="table-bordered">
-                    <% for( let i=0; i < products.length; i++ ) { %>
-                        <% const sizes = order.items[i].sizes %>
-                            <% for (const [size, quantity] of sizes.entries() ) { %>
-                             
-                       
 
-                        <tr class="bg-light">
-                            <td class="product-thumbnail text-start">
-                                <a href="#"><img
-                                        src="<%=products[i].productId.image[0].url%>"
-                                        alt="..." class="img-fluid" width="60vw"></a>
-                            </td>
-                            <td class="text-center" style="font-size: 1.2vw;">
-                                <b href="#" class="text-dark ">
-                                    <%=products[i].productId.name %>
-                                </b>
-                            </td>
-                            <td class="text-center text-dark" style="font-size: 1vw;">
-                                <%=products[i].productId.price %>
-                            </td>
-                            <td class="text-center" style="font-size: 1.2vw;"><%= size %></td>
-                            <td class="text-center" style="font-size: 1vw;"><span><%=quantity %></span>
-                            </td>
-                            <td id="totalPrice"
-                                class="product-subtotal text-start" style="font-size: 1vw;">
-                                <span>$<%=(quantity * products[i].productId.price).toFixed(2) %></span>
-                            </td>
-                        </tr>
-                        <% } %>
-                        <% } %>                                 
+<div class="container mt-5 mb-5">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <h1 class="m-0 display-5 font-weight-semi-bold">
+          <span class="text-secondary font-weight-bold border px-3 mr-1">SolMate</span>
+        </h1>
+        <div class="invoice p-5">
+          <h5>Your Order Confirmed!</h5>
+          <span class="font-weight-bold d-block mt-4">Hy <%=user.name%></span>
+          <span>Your order has been confirmed and will be shipped in the next two weeks!</span>
+          <div class="payment border-top mt-3 mb-3 border-bottom table-responsive">
+            <!-- Payment info (if applicable) -->
+          </div>
+          <div class="product border-bottom table-responsive">
+            <table class="table table-borderless">
+              <tbody class="table-bordered">
+                <% for( let i=0; i < products.length; i++ ) { %>
+                  <% const sizes = order.items[i].sizes %>
+                  <% for (const [size, quantity] of sizes.entries() ) { %>
+
+                    <tr class="bg-light">
+                      <td class="product-thumbnail text-start">
+                        <a href="#">
+                          <img src="<%=products[i].productId.image[0].url%>"
+                               alt="..." class="img-fluid" width="60vw">
+                        </a>
+                      </td>
+                      <td class="text-center">
+                        <a href="#" class="text-dark font-weight-bold">
+                          <%=products[i].productId.name %>
+                        </a>
+                      </td>
+                      <td class="text-center"><%=products[i].productId.price %></td>
+                      <td class="text-center"><%= size %></td>
+                      <td class="text-center"><span><%=quantity %></span></td>
+                      <td class="product-subtotal text-start">
+                        <span>$<%=(quantity * products[i].productId.price).toFixed(2) %></span>
+                      </td>
+                    </tr>
+                  <% } %>
+                <% } %>
+              </tbody>
+            </table>
+          </div>
+          <div class="row d-flex justify-content-end">
+            <div class="col-md-5">
+              <table class="table table-borderless">
+                <tbody class="totals">
+                  <tr class="border-top border-bottom">
+                    <td>
+                      <div class="text-left">
+                        <span class="font-weight-bold">Subtotal</span>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="text-right">
+                        <span class="font-weight-bold">$<%=order.total%></span>
+                      </div>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
-            <div class="row d-flex justify-content-end">
-              <div class="col-md-5">
-                <table class="table table-borderless">
-                  <tbody class="totals">
-                    <tr class="border-top border-bottom">
-                      <td>
-                        <div class="text-left">
-                          <span class="font-weight-bold">Subtotal</span>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="text-right">
-                          <span class="font-weight-bold">$<%=order.total%></span>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <p class="font-weight-bold mb-0">Thanks for shopping with us!</p>
-            <span>SolMate</span>
           </div>
-          <div class="d-flex justify-content-between footer p-3">
-            <span>SolMate <a href="/product">Continue Shopping</a></span>
-          </div>
+          <p class="font-weight-bold mb-0">Thanks for shopping with us!</p>
+          <span>SolMate</span>
+        </div>
+        <div class="d-flex justify-content-between footer p-3">
+          <span>SolMate <a href="/product">Continue Shopping</a></span>
         </div>
       </div>
     </div>
   </div>
+</div>
+
 <%- include("./layout/footer.ejs") %>
