--- a/views/admin/dashboardSales.ejs
+++ b/views/admin/dashboardSales.ejs
@@ -1,81 +1,201 @@
 <%-include("./layout/header")%>
 
-    
+  
+
+<style>
+    .dataTables_wrapper{
+        padding: 3rem;
+    }
+    .dataTables_wrapper .dt-buttons button{
+        background-color: #7FAD39;
+        border-radius: 5px;
+        border: none;
+        padding: .50rem .80rem;
+        font-weight: 500;
+    }
+
+    .dataTables_wrapper .dataTables_filter {   
+        margin: 1rem 0;
+    }
+
+    .dataTables_wrapper .dataTables_filter input{
+        box-shadow: none;
+    }
+
+    .dataTables_wrapper .dataTables_paginate{
+        display: flex;
+        justify-content: center;
+    }
+
+    .dataTables_wrapper .dt-buttons{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+
+/* .container {
+    padding-top: 120px;
+    padding-bottom: 120px;
+} */
+
+label {
+    font-size: 18px;
+}
+
+.dateP input {
+    padding: 10px 15px !important;
+    border: 1px solid #CFD8DC !important;
+    border-radius: 4px !important;
+    box-sizing: border-box;
+    background-color: #fff !important;
+    color: #000 !important;
+    font-size: 16px !important;
+    letter-spacing: 1px;
+    position: relative;
+    width: 100%;
+}
+
+.dateP input:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid #FFA000 !important;
+    outline-width: 0;
+}
+
+.daterangepicker {
+    background-color: #fff;
+    border-radius: 0 !important;
+    align-content: center !important;
+    padding: 0 !important;
+}
+
+
+thead tr:nth-child(2) {
+    color: #BDBDBD !important;
+}
+
+tbody tr td {
+    padding: 5px 7px !important;
+}
+
+.month {
+    font-size: 16px !important;
+    padding-bottom: 10px !important;
+    padding-top: 10px !important;
+}
+
+.start-date, .end-date {
+    border-radius: 0px !important;
+}
+
+.available:hover {
+    border-radius: 0px !important;
+}
+
+.off {
+    color: #EEEEEE !important;
+}
+
+.off:hover {
+    background-color: #EEEEEE !important;
+    color: #fff !important;
+}
+
+.drp-buttons {
+    display: none !important;
+}
+</style>
 <div class="container">
-    <div class="row my-3">
-        <div class="col-md-4 col-sm-6 mb-4 ">
-            <div class="card card-white">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <a href="/admin/dashboard/report" class="btn btn-transparent">
-                            <h4 class="mb-0 text-blue">Yearly Report</h4>
-                        </a>
-                        <i class="fas fa-chart-pie"></i>
-                    </div>
-                </div>
-            </div>
+  <div class="row my-3">
+    <div class="col-md-4 col-sm-6 mb-4 ">
+      <div class="card card-white">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-4">
+            <a href="/admin/dashboard/report" class="btn btn-transparent">
+              <h4 class="mb-0 text-blue">Yearly Report</h4>
+            </a>
+            <i class="fas fa-chart-pie"></i>
+          </div>
         </div>
-        <div class="col-md-4 col-sm-6 mb-4">
-            <div class="card card-white">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <div>
-                            <a onclick="month()" class="btn btn-transparent">
-                                <h4 class="mb-0 text-orange">Month Report</h4>
-                            </a>
-                        </div>
-                        <div>
-                            <i class="fas fa-chart-pie text-orange fs-2"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-4">
-            <div class="card card-white">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <div>
-                            <a onclick="dailysale()" class="btn btn-transparent">
-                                <h4 class="mb-0 text-pink">Daily Report</h4>
-                            </a>
-                        </div>
-                        <div>
-                            <i class="far fa-heart text-pink fs-2"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-    <div class="container-fluid my-3">
-        <div class="table-responsive overflow-auto">
-            <table id="dtBasicExample" class="table table-striped table-bordered my-3" cellspacing="0" width="100%">
-                <thead class="bg-light">
-                    <tr>
-                        <!-- <th>Order ID</th> -->
-                        <th>Date</th>
-                        <th>Total Order</th>
-                        <th>Total Product</th>
-                        <th>Total</th>
-                        <th>Profit</th>
-                    </tr>
-                </thead>
-                <tbody id="tableVa">
-                    <% for (let report of yearly) { %>
-                    <tr>
-                        <td>
-                            <%=report._id.year%>
-                        <td>
-                            <%=report.count%>
-                        </td>
-                        <td>
-                            <%=report.items%>
-                        </td>
-                        <td>&#x20B9;<%=report.total%>.00</td>
-                        <td>&#x20B9;<%=(report.total*15) /100%>
-                        </td>
-                        <%}%>
+    <div class="col-md-4 col-sm-6 mb-4">
+      <div class="card card-white">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-4">
+            <div>
+              <a onclick="month()" class="btn btn-transparent">
+                <h4 class="mb-0 text-orange">Month Report</h4>
+              </a>
+            </div>
+            <div>
+              <i class="fas fa-chart-pie text-orange fs-2"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-6 mb-4">
+      <div class="card card-white">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-4">
+            <div>
+              <a onclick="dailysale()" class="btn btn-transparent">
+                <h4 class="mb-0 text-pink">Daily Report</h4>
+              </a>
+            </div>
+            <div>
+              <i class="far fa-heart text-pink fs-2"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container px-1 px-sm-5 mx-auto dateP">
+    <form autocomplete="off">
+      <div class="flex-row d-flex justify-content-center">
+        <div class="col-xl-5 col-lg-6 col-11 px-1">
+          <div class="input-group input-daterange">
+            <label class="">Select Date Range :</label>
+            <input type="text" id="dateRange" name="daterange" value="01/01/2018 - 01/15/2018" readonly />
+          </div>
+        </div>
+      </div>
+    </form>
+    <div class="d-flex justify-content-center mt-3">
+        <button class="btn btn-sm btn-dark" onclick="saleByDate()" >apply</button>
+    </div>
+  </div>
+  <div class="container-fluid my-3">
+    <div class="table-responsive overflow-auto">
+      <table id="dtBasicExample" class="table table-striped table-bordered my-3" cellspacing="0" width="100%">
+        <thead class="bg-light">
+          <tr>
+            <!-- <th>Order ID</th> -->
+            <th>Date</th>
+            <th>Total Order</th>
+            <th>Total Product</th>
+            <th>Total</th>
+            <th>Profit</th>
+          </tr>
+        </thead>
+        <tbody id="tableVa">
+          <% for (let report of yearly) { %>
+          <tr>
+            <td>
+              <%=report._id.year%>
+            <td>
+              <%=report.count%>
+            </td>
+            <td>
+              <%=report.items%>
+            </td>
+            <td>&#x20B9;<%=report.total%>.00</td>
+            <td>&#x20B9;<%=(report.total*15) /100%>
+            </td>
+            <%}%>
                     </tr>
                 </tbody>
             </table>
@@ -103,7 +223,11 @@
         src="https://cdn.datatables.net/buttons/2.3.4/js/buttons.html5.min.js"></script>
     <script type="text/javascript" language="javascript"
         src="https://cdn.datatables.net/buttons/2.3.4/js/buttons.print.min.js"></script>
+
+
+
     <script>
+
         var table = $('#dtBasicExample').DataTable({
             dom: 'Bfrtip',
             "searching": false,// false to disable search (or any other option)
@@ -158,7 +282,7 @@
             })
                 .then((result) => {
                     if (result.data.error) {
-                        console.log("oops");
+                        // console.log("oops");
                     } else {
                         let html = "";
                         let saleReport = result.data.dailySales;
@@ -173,18 +297,50 @@
                         </tr>`;
                         });
                         table.clear().rows.add($(html)).draw();
-                        $(document).ready(function () {
-                        $('#dtBasicExample').DataTable({
-                            "searching": false // false to disable search (or any other option)
-                        });
-                        $('.dataTables_length').addClass('bs-select');
-                    })
                     }
                 })
                 .catch((err) => {
                     console.log(err);
                 });
         }
+
+        function saleByDate(){
+        const dateRange = $("#dateRange").val();
+        axios({
+            method: "post",
+            url: "/admin/dashboard/report/date",
+            data: {
+                dateRange
+            }
+        })
+        .then((result) => {
+                if (result.data.error) {
+                    console.log("oops");
+                } else {
+                    let html = "";
+                    let saleReport = result.data.byDateSales;
+                    saleReport.forEach((element) => {
+                        html += `<tr>
+                            <td><a href="#">${element._id.Day}/${element._id.Month}/${element._id.Year}</a></td>
+                            <td>${element.count}</td>
+                            <td>${element.items}</td>
+                            <td>&#x20B9;${element.total}.00</td>
+                            <td>&#x20B9;${(element.total * 15) / 100}</td>
+                        </tr>`;
+                    });
+                    table.clear().rows.add($(html)).draw();
+                //     $(document).ready(function () {
+                //     $('#dtBasicExample').DataTable({
+                //         "searching": false // false to disable search (or any other option)
+                //     });
+                //     $('.dataTables_length').addClass('bs-select');
+                // })
+                }
+            })
+            .catch((err) => {
+                console.log(err);
+            }); 
+    }
 
     </script>
 
