--- a/views/admin/layout/footer.ejs
+++ b/views/admin/layout/footer.ejs
@@ -4,11 +4,30 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  
 <script>
+          $(document).ready(function(){
+        $(function() {
+
+            const endDate = moment().format('DD/MM/YYYY');
+            const startDate = moment().subtract(7, 'days').format('DD/MM/YYYY');
+
+            $('input[name="daterange"]').daterangepicker({
+            "startDate": startDate,
+            "endDate": endDate,
+            opens: 'center',
+            locale: {
+                format: 'DD/MM/YYYY'
+            }
+            });
+        });
+    });
     $(document).ready(function () {
         $('#ordersTable').DataTable({
             lengthMenu: [5, 10, 25, 50],
