--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -70,7 +70,7 @@
     <div class="about-content">
       <h3 class="mb-4">About Our Company</h3>
       <p class="mb-3">
-        Our company <u><a href="/user" class="custom-link">SolMate</a></u> was established on 23rd July 2023.
+        Our company <u><a href="/" class="custom-link">SolMate</a></u> was established on 23rd July 2023.
       </p>
       <p class="mb-3">
         Our primary objective is to deliver superior products at competitive prices.
