--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -48,7 +48,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-7 col-md-7">
-              <div id="colorlib-logo"><a href="/user">Footwear</a></div>
+              <div id="colorlib-logo"><a href="/">Footwear</a></div>
             </div>
             <div class="col-sm-3 col-md-3 mt-3">
               <form  class="search-wrap">
@@ -83,13 +83,12 @@
           <div class="row">
             <div class="col-sm-12 text-left menu-1">
               <ul>
-                <li class="active"><a href="/user">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li class="has-dropdown">
                   <a href="/product">Men</a>
                 </li>
                 <li><a href="/product">Women</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li class="cart"><a href="/cart"><i class="icon-shopping-cart"></i> Cart [<%=countCart%>]</a></li>
               </ul>
             </div>
@@ -278,7 +277,7 @@
               <h4>Customer Care</h4>
               <p>
               <ul class="colorlib-footer-links">
-                <li><a href="#">Contact</a></li>
+
                 <li><a href="#">Returns/Exchange</a></li>
                 <li><a href="#">Gift Voucher</a></li>
                 <li><a href="#">Wishlist</a></li>
