--- a/views/auth/layouts/header.ejs
+++ b/views/auth/layouts/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SolMate</title>
     <script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -16,7 +16,7 @@
             </button>
         </div> -->
         <div class="container">
-          <a class="navbar-brand logo mx-3 text-secondary" href="/user">SolMate</a>
+          <a class="navbar-brand logo mx-3 text-secondary" href="/">SolMate</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
