--- a/views/user/layout/header.ejs
+++ b/views/user/layout/header.ejs
@@ -176,7 +176,7 @@ html, body {
 <div id="page">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
 		<div class="container-fluid col-12 d-flex justify-content-between">
-			<a class="navbar-brand" href="/user">SolMate</a>
+			<a class="navbar-brand" href="/">SolMate</a>
 			<% if (session) { %>
 				<div class="nav-item dropdown">
 					<button class="btn btn-primary dropdown-toggle text-dark" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <%=name%> </button>
@@ -196,7 +196,7 @@ html, body {
 	<div class="container-fluid">
 		<ul class="navbar-nav me-auto my-auto">
 			<li class="nav-item my-auto">
-				<a class="nav-link active" aria-current="page" href="/user">Home</a>
+				<a class="nav-link active" aria-current="page" href="/">Home</a>
 			</li>
 			<li class="nav-item dropdown my-auto">
 				<a class="nav-link " href="#" id="">Men</a>
