--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -76,12 +76,7 @@
                 </div>
 
                 <div>
-                  <div class="form-check d-flex justify-content-between">
-                    <div>
-                      <input class="form-check-input border-2" type="checkbox" value="" id="flexCheckDefault" />
-                      <label class="form-check-label" for="flexCheckDefault">Keep me signed
-                        in</label>
-                    </div>
+                  <div class="form-check d-flex justify-content-center">
                     <a style="text-decoration: none;" href="/signin/forgot">Forgot
                       password</a>
                   </div>
