--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -239,26 +239,16 @@
             <div class="col footer-col colorlib-widget">
               <h4>About Footwear</h4>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-              <p>
-              <ul class="colorlib-social-icons">
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-              </ul>
-              </p>
             </div>
             <div class="col footer-col colorlib-widget">
-              <h4>Customer Care</h4>
+              <h4>Useful Links</h4>
               <p>
               <ul class="colorlib-footer-links">
 
-                <li><a href="#">Returns/Exchange</a></li>
-                <li><a href="#">Gift Voucher</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Special</a></li>
-                <li><a href="#">Customer Services</a></li>
-                <li><a href="#">Site maps</a></li>
+                <li><a href="/user/profile">Profile</a></li>
+                <li><a href="/user/order">Orders</a></li>
+                <li><a href="/cart">Cart</a></li>
+                <li><a href="/product">Shop</a></li>
               </ul>
               </p>
             </div>
@@ -266,22 +256,10 @@
               <h4>Information</h4>
               <p>
               <ul class="colorlib-footer-links">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Delivery Information</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Order Tracking</a></li>
+                <li><a href="/about">About us</a></li>
+                <li>Our Vision <a>Revolutionizing shoe shopping with diverse, quality footwear for all styles</a></li>
               </ul>
               </p>
-            </div>
-
-            <div class="col footer-col">
-              <h4>News</h4>
-              <ul class="colorlib-footer-links">
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Exhibitions</a></li>
-              </ul>
             </div>
 
             <div class="col footer-col">
@@ -303,10 +281,10 @@
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;<script>
                     document.write(new Date().getFullYear());
-                  </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                  </script> All rights reserved | </a>
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </span>
-                <span class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> , <a href="http://pexels.com/" target="_blank">Pexels.com</a></span>
+                <span class="block">SolMate <a href="http://unsplash.co/" target="_blank">@Rinshid</a> </span>
               </p>
             </div>
           </div>
